[package]
name = "hugoterm"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.10.1", package = "gtk4" }
vte4 = "0.9.0" 
portable-pty = "0.9.0"

cocoa = "0.26.1"
objc2 = "0.6.3"
libloading = "0.8.9"
objc2-app-kit = "0.3.2"
core-foundation = "0.10.0"
glib = "0.21.3"


once_cell = "1.19" 
pango = "0.21.3"
dirs = "6.0"
phf = { version = "0.13.1", features = ["macros"] }

config = "0.15.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"


[build-dependencies]
cc = "1.2.41"